Issue#134. Change String on contacts type .
