# home-application/src/main/java/com/softserveinc/ita/homeproject/application/config/rsql/UserRSQLEndpointConfig.java
@@ -21,7 +21,8 @@ public class UserRSQLEndpointConfig implements RSQLEndpointConfig<User, UserQuer
         HashMap<UserQueryParamEnum, String> map = new HashMap<>();
 
         map.put(UserQueryParamEnum.EMAIL, "email");
-        map.put(UserQueryParamEnum.CONTACT, "contact");
+        map.put(UserQueryParamEnum.CONTACT_PHONE, "contactPhone");
+        map.put(UserQueryParamEnum.CONTACT_EMAIL, "contactEmail");
         map.put(UserQueryParamEnum.FIRST_NAME, "firstName");
         map.put(UserQueryParamEnum.LAST_NAME, "lastName");
 
