# home-data/src/main/java/com/softserveinc/ita/homeproject/homedata/entity/Phone.java
@@ -12,9 +12,9 @@ import javax.persistence.Entity;
 @NoArgsConstructor
 @AllArgsConstructor
 @Entity
-@DiscriminatorValue("phone")
+@DiscriminatorValue("contactPhone")
 public class Phone extends Contact {
 
     @Column
-    private String phone;
+    private String contactPhone;
 }
